--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&" />
     <link rel="stylesheet" href="css/styles.css">
 
+    <script src="scripts.js" defer></script>
+    <script src="splittext.js" defer></script>
+
 
 </head>
 <body>
