--- a/page2.html
+++ b/page2.html
@@ -8,6 +8,9 @@
 
     <link rel="stylesheet" href="css/styles.css">
 
+    <script src="scripts.js" defer></script>
+    <script src="splittext.js" defer></script>
+
 </head>
 <body>
 
